fix spacing on 20 13

--- a/assets/css/theme-specific/twentrythirteen.css
+++ b/assets/css/theme-specific/twentrythirteen.css
@@ -3,3 +3,11 @@
     max-width: 604px;
     width: 100%;
 }
+
+#wpfc_sermon_sorting {
+    margin: 40px 0 0 !important;
+}
+
+.wpfc-sermon {
+    margin: 0;
+}
